Stream 문법으로 코드 리펙터링